# walking_assist

./: my.txt
backup/scripts/: abstract.py  left_lat.py  left_med.py  left_med00.py  left_med_ly.py  left_med_xy.py  right_lat.py  right_lat_xy.py  right_med.py  strategy_group.py
backup/src_static/cable_force/: CMakeLists.txt
backup/src_static/control/: CMakeLists.txt
backup/src_static/emg_process/: CMakeLists.txt  package.xml
backup/src_static/ground_reaction_force/: CMakeLists.txt  foot_plot.xml  package.xml
backup/src_static/stm32_emg/: package.xml
backup/src_static/strategy/: package.xml
backup/src_static/usb_imu/: package.xml
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/cable_force/: Config.h
devel/include/control/: Command.h
devel/include/ground_reaction_force/: GRF_Data.h
devel/include/strategy/: Fgrf.h  drConfig.h
devel/include/strategy_test/: Fgrf.h  drConfig.h
devel/include/unitree_motor/: Ctrl.h  Sensor.h
devel/lib/cable_force/: cable_force_node
devel/lib/control/: control_node  tune_node
devel/lib/emg_process/: emg_process_node
devel/lib/ground_reaction_force/: ground_reaction_force_node
devel/lib/pkgconfig/: cable_force.pc  control.pc  emg_process.pc  ground_reaction_force.pc  stm32_emg.pc  strategy.pc  strategy_test.pc  (+2 more)
src/control/: CMakeLists.txt
src/stm32_emg/: CMakeLists.txt
src/strategy/: CMakeLists.txt
src/unitree_motor/: CMakeLists.txt
src/unitree_motor/include/serialPort/: CMakeLists.txt  SerialPort.h
src/unitree_motor/include/serialPort/src/: SerialPort.cpp
src/usb_imu/: CMakeLists.txt
(+254 files in other folders)
